header z-index fixing

--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -38,6 +38,7 @@
 
 .burger {
   position: absolute;
+  z-index: 101;
   top: 24px;
   right: 20px;
   display: none;
